--- a/index.html
+++ b/index.html
@@ -3856,7 +3856,7 @@
             </div>
         </section>
 
-        <!--=============== APP ===============-->
+        <!--=============== APPp ===============-->
         <section class="app section container">
             <div class="app__container grid">
                 <div class="app__data">
